RESOLVED FIXED309164
Fix currentTime getter to return defaultPlaybackStartPosition when no player exists
https://bugs.webkit.org/show_bug.cgi?id=309164
Summary Fix currentTime getter to return defaultPlaybackStartPosition when no player ...
Ahmad Saleem
Reported 2026-03-04 08:14:34 PST
ssia - progress WPT
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-04 08:14:40 PST
Ahmad Saleem
Comment 2 2026-03-04 08:16:07 PST
EWS
Comment 3 2026-03-04 12:54:32 PST
Committed 308654@main (74176adf63af): <https://commits.webkit.org/308654@main> Reviewed commits have been landed. Closing PR #59891 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.