Fix currentTime getter to return defaultPlaybackStartPosition when no player exists https://bugs.webkit.org/show_bug.cgi?id=309164 rdar://171722368

Reviewed by Eric Carlson and Jean-Yves Avenard.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Per spec [1], "The currentTime attribute must, on getting, return the media
element's default playback start position, unless that is zero, in which
case it must return the element's official playback position."

The setter correctly stores the value in m_defaultPlaybackStartPosition
when readyState is HAVE_NOTHING, but the getter in currentMediaTime()
had an early return for !m_player before checking
m_defaultPlaybackStartPosition, always returning 0.

Reorder the checks so m_defaultPlaybackStartPosition is consulted first,
as the spec requires [1].

[1] https://html.spec.whatwg.org/multipage/media.html#default-playback-start-position

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::currentMediaTime const):
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/offsets-into-the-media-resource/currentTime-expected.txt: Progression

Canonical link: https://commits.webkit.org/308654@main